--- a/bin/templates/release-notes.html.template
+++ b/bin/templates/release-notes.html.template
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Metabase Release Notes</title>
+    <title>SkillMithra BI Release Notes</title>
   </head>
   <body>
     <ul>
